@@ -20,7 +20,13 @@ WISH: kick out xpm.C, replace by pixbuf
 DUMB: support tex fonts
 
 TODO: skipscorll option
+TODO: really enable libafterimage by default (6mb => 10mb rss without using it)?
+TODO: document -blr units, and possibly fix blur (20 seems to be about 3 pixels,
+      80 seems to be about 3 pixels, too, just much slower).
+TODO: when window partilaly off-screen, -blr does not have any effetc anymore.
 8.
+	- fix a lot of commandline switches (-C, -iconic, -ic, , -tr)
+          that were being ignored (Sasha Vasko).
 	- initial transparency improvement/afterstep support
           patch by Sasha Vasko.
 	- nuke reconf script, serves no purpose anymore.
